tests/should-fail/semantics/function-call-with-32-params.j

function a takes integer a1, integer a2, integer a3, integer a4, integer a5, integer a6, integer a7, integer a8, integer a9, integer a10, integer a11, integer a12, integer a13, integer a14, integer a15, integer a16, integer a17, integer a18, integer a19, integer a20, integer a21, integer a22, integer a23, integer a24, integer a25, integer a26, integer a27, integer a28, integer a29, integer a30, integer a31, integer a32 returns nothing
endfunction

function b takes nothing returns nothing
    call a(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32)
endfunction

